kustomize/api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portail-formation
  labels:
    app: portail-formation
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: http
  selector:
    app: portail-formation
